test_files/fails/t_adv_outside_delay.ar
let rec foo =
    let y = adv (wait second) in
    delay (adv (wait second) :: foo);

console <- foo;
